--- a/templates/base.html
+++ b/templates/base.html
@@ -59,6 +59,11 @@
                             <i class="bi bi-clock-history"></i> Отчеты
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'notes:note_list' %}">
+                            <i class="bi bi-sticky"></i> Заметки
+                        </a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
